@@ -1,6 +1,8 @@
 v3.0.3 - YYYY-MMM-DD (to be released)
 -------------------------------------
 
+ - Fix OpenBSD build
+   [Issue #1841 - @victorhora, @zimmerle, @juanfra684]
  - Variable names must match fully, not partially. Match should be case
    insensitive.
    [Issue #1818, #1820, #1810, #1808 - @michaelgranzow-avi, @victorhora,
